fixed image stretching issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1793,7 +1793,7 @@ body {
       color: black;
     }
 
-    img {
+    .art-item-container img {
       height: 100vh !important;
       border-radius: 0px;
       margin-left: auto;
